Add real ASSC image

--- a/assc.css
+++ b/assc.css
@@ -33,7 +33,7 @@ body {
     min-width: 500px;
     flex: 1 1 auto;
     display: flex;
-    background-image: url("banana_cat.jpeg");
+    background-image: url("assc.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
