--- a/assc.css
+++ b/assc.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .Assc {
     height: 100%;
     width: 100%;
@@ -11,12 +15,8 @@
     min-height: 1px;
 }
 
-body {
-    margin: 0;
-}
-
 .Images {
-    min-width: 600px;
+    min-width: 300px;
     flex: 1 1 auto;
     display: flex;
 }
@@ -26,17 +26,30 @@ body {
     flex: 0 1 auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    overflow-y: auto;
 }
 
 .ImageViewer {
-    min-width: 500px;
+    min-width: 200px;
     flex: 1 1 auto;
     display: flex;
-    background-image: url("assc.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    align-items: center;
+}
+
+.ImageViewer > input[type=radio] {
+  display: none;
+}
+
+.ImageViewer .ImageViewer-fullImage {
+  display: none;
+}
+
+
+.ImageViewer > input[type=radio]:checked + .ImageViewer-fullImage {
+    display: block;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .Description {
@@ -46,7 +59,6 @@ body {
     display: flex;
     flex-direction: column;
     padding-left: 30px;
-    justify-content: space-around;
 }
 
 .Description-block {
@@ -220,9 +232,11 @@ body {
 }
 
 .CtaButton {
+    display: block;
     font-family: 'Montserrat', sans-serif;
     background-color: #4c4c4b;
     color: white;
+    text-decoration: none;
     text-align: center;
     padding: 20px 0 20px;
     letter-spacing: 1px;
