Fix subtitle CSS

--- a/_description.scss
+++ b/_description.scss
@@ -17,6 +17,12 @@
     padding-bottom: 12px;
 }
 
+.Description-subtitle {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .8em;
+    color: #a3a5a7;
+}
+
 .Description-content {
     overflow-y: auto;
     flex: 1 1 auto;
