--- a/assc.css
+++ b/assc.css
@@ -103,6 +103,12 @@
   padding-bottom: 12px;
 }
 
+.Description-subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.8em;
+  color: #a3a5a7;
+}
+
 .Description-content {
   overflow-y: auto;
   flex: 1 1 auto;
