--- a/assc.css
+++ b/assc.css
@@ -85,18 +85,42 @@
 }
 
 .Description-container {
-  width: 50%;
-  height: 100%;
   display: flex;
 }
 
 .Description {
-  margin: 30px 50px;
   max-width: 500px;
   display: flex;
   flex-direction: column;
 }
 
+.Description-content {
+  flex: 1 1 auto;
+}
+
+@media screen and (orientation: portrait) {
+  .Description-container {
+    width: 100%;
+  }
+
+  .Description {
+    margin: 0px 50px 50px 50px;
+  }
+}
+@media screen and (orientation: landscape) {
+  .Description-container {
+    width: 50%;
+    height: 100%;
+  }
+
+  .Description {
+    margin: 30px 50px;
+  }
+
+  .Description-content {
+    overflow-y: auto;
+  }
+}
 .Description-title {
   font-family: "Lora", serif;
   font-size: 1.75em;
@@ -107,11 +131,6 @@
   font-family: "Montserrat", sans-serif;
   font-size: 0.8em;
   color: #a3a5a7;
-}
-
-.Description-content {
-  overflow-y: auto;
-  flex: 1 1 auto;
 }
 
 .Description-block {
@@ -164,26 +183,53 @@
 }
 
 .Images-container {
-  width: 50%;
-  height: 100%;
   display: flex;
-  justify-content: flex-end;
 }
 
 .Images {
-  margin: 30px 0px 30px 50px;
   display: flex;
   flex: 0 1 auto;
   min-width: 1px;
 }
 
 .ImagePicker {
-  width: 100px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  flex: 0 0 auto;
+  display: flex;
 }
 
+@media screen and (orientation: landscape) {
+  .Images-container {
+    width: 50%;
+    height: 100%;
+    justify-content: flex-end;
+  }
+
+  .Images {
+    margin: 30px 0px 30px 50px;
+    flex-direction: row;
+  }
+
+  .ImagePicker {
+    overflow-x: hidden;
+    overflow-y: auto;
+    flex-direction: column;
+  }
+}
+@media screen and (orientation: portrait) {
+  .Images-container {
+    width: 100%;
+  }
+
+  .Images {
+    margin: 30px 50px 30px 50px;
+    flex-direction: column-reverse;
+  }
+
+  .ImagePicker {
+    overflow-x: auto;
+    overflow-y: hidden;
+    flex-direction: row;
+  }
+}
 .Thumbnail {
   width: 100px;
 }
@@ -305,9 +351,16 @@ body {
   display: flex;
 }
 
+@media screen and (orientation: portrait) {
+  .Assc {
+    flex-direction: column;
+    overflow-y: auto;
+  }
+}
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
