--- a/_images.scss
+++ b/_images.scss
@@ -1,27 +1,57 @@
 .Images-container {
-    width: 50%;
-    height: 100%;
     display: flex;
-    justify-content: flex-end;
 }
 
 .Images {
-    margin: 30px 0px 30px 50px;
     display: flex;
     flex: 0 1 auto;
     min-width: 1px;
 }
 
 .ImagePicker {
-    width: 100px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    flex: 0 0 auto;
+    display: flex;
+}
+
+@media screen and (orientation: landscape) {
+    .Images-container {
+        width: 50%;
+        height: 100%;
+        justify-content: flex-end;
+    }
+
+    .Images {
+        margin: 30px 0px 30px 50px;
+        flex-direction: row;
+    }
+
+    .ImagePicker {
+        overflow-x: hidden;
+        overflow-y: auto;
+        flex-direction: column;
+    }
+}
+
+@media screen and (orientation: portrait) {
+    .Images-container {
+        width: 100%;
+    }
+
+    .Images {
+        margin: 30px 50px 30px 50px;
+        flex-direction: column-reverse;
+    }
+
+    .ImagePicker {
+        overflow-x: auto;
+        overflow-y: hidden;
+        flex-direction: row;
+    }
 }
 
 .Thumbnail {
     width: 100px;
 }
+
 
 .ImageViewer {
     flex: 1 1 auto;
