--- a/_cta_button.scss
+++ b/_cta_button.scss
@@ -1,6 +1,7 @@
 .CtaButton {
     display: block;
     font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
     background-color: #4c4c4b;
     color: white;
     text-decoration: none;
