--- a/_assc.scss
+++ b/_assc.scss
@@ -15,6 +15,7 @@ body {
     height: 100%;
     width: 100%;
     display: flex;
+    position: absolute;
 }
 
 @media screen and (orientation: portrait) {
