--- a/_size_picker.scss
+++ b/_size_picker.scss
@@ -4,7 +4,7 @@
     @include fonts.Body-1;
     font-style: italic;
     color: #808284;
-    position: absolute; 
+    position: absolute;
 }
 
 .SizePicker-buttons {
@@ -18,7 +18,7 @@
     height: 30px;
     width: 30px;
     margin: 20px 5px 5px 0px;
-    display: flex;  
+    display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid transparent;
@@ -33,25 +33,25 @@
     color: #808284;
 }
 
-.SizePicker-buttons .Button-1:hover + div:before {
+.SizePicker-buttons .Button-1:hover+div:before {
     content: "28\2014 Coming 03/12/24";
 }
 
-.SizePicker-buttons .Button-2:hover + div + div:before {
-    content: "27\2014 Coming 03/12/23";
+.SizePicker-buttons .Button-2:hover+div+div:before {
+    content: "27\2014 Available now";
 }
 
-.SizePicker-buttons .Button-3 + div + div + div:before {
-    content: "26\2014 Available now";
+.SizePicker-buttons .Button-3+div+div+div:before {
+    content: "26\2014 Discontinued";
 }
 
-.SizePicker-buttons .Button-4:hover + div + div + div + div:before {
+.SizePicker-buttons .Button-4:hover+div+div+div+div:before {
     content: "25\2014 Discontinued";
 }
 
 
 .SizePicker-buttons .Button .ButtonContent {
-    @include fonts.Body-1; 
+    @include fonts.Body-1;
 }
 
 .SizePicker-buttons .Button-available {
@@ -66,12 +66,12 @@
     margin: 8px 0;
 }
 
-.SizePicker-guide > a {
+.SizePicker-guide>a {
     @include fonts.Body-1;
     color: #4c4c4b;
     text-decoration: none;
 }
 
-.SizePicker-guide > a:hover {
+.SizePicker-guide>a:hover {
     text-decoration: underline;
 }
