--- a/_size_picker.scss
+++ b/_size_picker.scss
@@ -37,11 +37,11 @@
     content: "28\2014 Coming 03/12/24";
 }
 
-.SizePicker-buttons .Button-2:hover+div+div:before {
+.SizePicker-buttons .Button-2+div+div:before {
     content: "27\2014 Available now";
 }
 
-.SizePicker-buttons .Button-3+div+div+div:before {
+.SizePicker-buttons .Button-3:hover+div+div+div:before {
     content: "26\2014 Discontinued";
 }
 
